--- a/src/chat-view.html
+++ b/src/chat-view.html
@@ -23,7 +23,7 @@
 		@apply(--layout-flex);
 		@apply(--layout-vertical);
 		overflow: hidden;
-		height: 92%;
+		height: 100%;
 	}
 
 	.me {
@@ -54,6 +54,9 @@
 	}
 	#sendbutton {
 		color: orange;
+		position: absolute;
+		bottom: 10px;
+		right: 50px;
 	}
 	#list{
 		 @apply(--layout-flex);
@@ -62,6 +65,7 @@
 		@apply(--layout-horizontal);
       	@apply(--layout-end);
 		padding: 5px;
+		width: 80%;
   	}
 
 </style>
