--- a/src/incidents-view.html
+++ b/src/incidents-view.html
@@ -1,9 +1,16 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-item/paper-item-body.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+
+<link rel="import" href="./create-incident.html">
 
 <dom-module id="incidents-view">
 
@@ -14,12 +21,23 @@
         display: block;
         padding: 16px;
       }
+      .projectcard {
+          cursor: pointer;
+          margin-top: 10px;
+          max-width: 400px;
+          background: white;
+      }
+      .projectcard:hover {
+          background: steelBlue;
+      }
+      /*
       .item {
           margin-left: 20px;
       	 cursor: pointer;
           max-width: 400px;
           margin-right: 20px;
       }
+      */
       #addbutton {
           background: orange;
           position: fixed;
@@ -30,27 +48,31 @@
       .close{
           color: grey;
       }
-      .list {
-          position: absolute;
-          height: 92%;
-          overflow: auto;
-      }
+
     </style>
-    <div class='list'>
+
+      <paper-fab id='addbutton' icon="add" raised toggles active="{{create}}"></paper-fab>
+      <paper-dialog id='adddialog' opened="{{create}}">
+          <h2>Nieuw incident</h2>
+          <create-incident id='addincident'></create-incident>
+          <div class="buttons">
+              <paper-button dialog-dismiss>Cancel</paper-button>
+          </div>
+      </paper-dialog>
+
+    <div class='layout vertical'>
         <h2>Incidenten</h2>
-     <iron-selector attr-for-selected="id" selected="{{selectedproject}}">
+        <p>Kies het incident waarmee u gaat werken</p>
+        <iron-selector attr-for-selected="id" selected="{{selectedproject}}">
      	<template is="dom-repeat" items="[[projects]]" sort="datesort">
-            <paper-material id="[[item._id]]" class='item'>
-     		<paper-icon-item>
-                <div class="avatar" item-icon></div>
-    			<paper-item-body two-line>
-    				<div>[[item._data.name]]</div>
-    				<div secondary>[[updated(item)]]</div>
-    			</paper-item-body>
-                <paper-icon-button class='close' icon="close" alt="Sluit incident" on-click='remove'>
-                </paper-icon-button>
-    		</paper-icon-item>
-        </paper-material>
+                <paper-item id="[[item._id]]" class='projectcard' elevation="1">
+                    <paper-item-body two-line>
+                        <div>[[item._data.name]]</div>
+                        <div secondary>[[updated(item)]]</div>
+                    </paper-item-body>
+                    <paper-icon-button class='close' icon="close" alt="Sluit incident" on-click='remove'>
+                    </paper-icon-button>
+                </paper-item>
     	</template>
      </iron-selector>
     </div>
@@ -63,10 +85,23 @@
       properties: {
         route: Object,
         projects: Array,
-            selectedproject: {
-                type: String,
-                notify: true
-            }
+        selectedproject: {
+            type: String,
+            notify: true
+        },
+          create: {
+              type: Boolean,
+              observer: '_createIncident'
+          }
+      },
+        ready: function(){
+            var self = this;
+            this.addEventListener('newincident',function(e){
+                self.$.adddialog.close();
+            });
+        },
+        _createIncident: function(){
+            this.$.addincident.activate();
         },
         updated: function(d){
             var displayDate;
@@ -78,9 +113,9 @@
             } else {
                 displayDate = date.toLocaleTimeString();
             }
-
-    		var creator = d.creator()?d.creator().data('name'):'unknown';
-    		return displayDate + ' (by: ' + creator + ')';
+            return displayDate;
+    		//var creator = d.creator()?d.creator().data('name'):'unknown';
+    		//return displayDate + ' (by: ' + creator + ')';
     	},
         datesort: function(a,b){
             return b.updated() - a.updated();
