--- a/src/teams-view.html
+++ b/src/teams-view.html
@@ -1,11 +1,13 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
 
 <dom-module id="teams-view">
 
   <!-- Defines the element's style and local DOM -->
   <template>
+      <style include="iron-flex iron-flex-alignment"></style>
     <style>
       :host {
         display: block;
@@ -15,15 +17,16 @@
   		cursor: pointer;
   		margin-top: 10px;
   		display: block;
-        width: 400px;
+        max-width: 400px;
   	}
   	.teamcard:hover {
   		background: steelBlue;
   	}
     </style>
-    <div name='users' class='layout vertical'>
+    <div name='users'>
      <h2>Teams</h2>
-     <iron-selector selected="{{selectedteam}}">
+        <p>Kies het team waarmee u gaat werken</p>
+     <iron-selector selected="{{selectedteam}}" class='layout vertical'>
         <template is='dom-repeat' items='[[teams]]'>
             <paper-card class='teamcard' heading="{{item.id}}">
                 <div class="card-content">{{item.text}}</div>
