--- a/src/incidents-view.html
+++ b/src/incidents-view.html
@@ -8,7 +8,7 @@
 <link rel="import" href="../bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-item/paper-item-body.html">
-<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+
 
 <link rel="import" href="./create-incident.html">
 
@@ -52,13 +52,9 @@
     </style>
 
       <paper-fab id='addbutton' icon="add" raised toggles active="{{create}}"></paper-fab>
-      <paper-dialog id='adddialog' opened="{{create}}">
-          <h2>Nieuw incident</h2>
-          <create-incident id='addincident'></create-incident>
-          <div class="buttons">
-              <paper-button dialog-dismiss>Cancel</paper-button>
-          </div>
-      </paper-dialog>
+      
+      <create-incident id='addincident' opened='{{create}}'></create-incident>
+          
 
     <div class='layout vertical'>
         <h2>Incidenten</h2>
@@ -68,6 +64,7 @@
                 <paper-item id="[[item._id]]" class='projectcard' elevation="1">
                     <paper-item-body two-line>
                         <div>[[item._data.name]]</div>
+                        <div secondary>[[item._data.scenario]]</div>
                         <div secondary>[[updated(item)]]</div>
                     </paper-item-body>
                     <paper-icon-button class='close' icon="close" alt="Sluit incident" on-click='remove'>
@@ -90,18 +87,11 @@
             notify: true
         },
           create: {
-              type: Boolean,
-              observer: '_createIncident'
+              type: Boolean
           }
       },
         ready: function(){
-            var self = this;
-            this.addEventListener('newincident',function(e){
-                self.$.adddialog.close();
-            });
-        },
-        _createIncident: function(){
-            this.$.addincident.activate();
+
         },
         updated: function(d){
             var displayDate;
@@ -120,10 +110,6 @@
         datesort: function(a,b){
             return b.updated() - a.updated();
         },
-    	add: function(){
-    		this.$.adddialog.open();
-    		this.$.addincident.activate();//TODO
-    	},
     	remove: function(e){
     		e.stopPropagation();
     		var r = confirm("You are going to remove this incident from the list!");
