--- a/src/map-view.html
+++ b/src/map-view.html
@@ -88,7 +88,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div main>
 
             <mappu-map class='flex' id='mapelement' map="{{map}}">
-                <gm-geosearch id="geosearch"></gm-geosearch>
+                <gm-geosearch id="geosearch" 
+                	last-boundary="{{lastBoundary}}"></gm-geosearch>
                 <iron-collapse id="layermngr" class='collapse-content' opened='[[layerstoggled]]'>
                     LAyerManger
                     <mappu-layermanager map="[[map]]"></mappu-layermanager>
@@ -129,40 +130,69 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           },
           activeuser: {
               type: Object
+          },
+          startlocation: {
+          	  type: Object,
+          	  observer: '_startlocationChanged'
+          },
+          layers: {
+          	  type: Array,
+          	  observer: '_layersChanged'
+          },
+          map: {
+          	  type: Object,
+          	  notify: true
           }
       },
       ready: function(){
           var self = this;
           window.cowlayer = this.cowlayer;
-          var ahnlayer = new d3.mappu.RasterLayer("Hoogtekaart", {
-                  ogc_type: 'wms',
-                  url: "http://t3.edugis.nl/tiles/tilecache.py",
-                  layers: 'hoogtes',
-                  visible: false,
+          /*
+          var background = new d3.mappu.RasterLayer("Nachtkaart", {
+                  ogc_type: 'tms',
+                  url: "http://saturnus.geodan.nl/mapproxy/map/tms/1.0.0/nachtkaart/EPSG3857/{z}/{y}/{x}.png",
+                  visible: true,
                   opacity: 0,
                   config: {
-                      title: 'Hoogte maaiveld'
+                      title: 'Nachtkaart'
                   }
-              }).addTo(this.map);
-          var floodlayer = new d3.mappu.VectorLayer('Overstroming',{
+           }).addTo(this.map);
+          */
+
+          var searchlayer = new d3.mappu.VectorLayer('Zoekresultaat',{
                   reproject: true,
                   style: {
                       fill: 'none',
-                      stroke: 'steelBlue',
+                      stroke: 'red',
+                      'stroke-opacity': 0.5,
                       'stroke-width': 2
                   }
           }).addTo(this.map);
-          floodlayer.setZIndex(0); //below sketch layer
-
+          
           this.addEventListener('featureReady',function(e){
             var feature = e.detail;
             self.itemstore.records({_id:feature.id.toString()}).data('type','feature').data('feature',feature).sync();
           });
           this.addEventListener('goto-coords',function(d){
       		self.map.center = d.detail;
-
+      		searchlayer.data = [{
+      				type: 'Feature',
+      				id: 1,
+      				geometry: self.lastBoundary
+      		}];
   			self.map.redraw();
       	  });
+      },
+      _startlocationChanged: function(data){
+      	  var self = this;
+      	  
+      	  window.setTimeout(function(){
+      	  	  self.map.resize();
+      	  	  self.map.center = [data.lng || data.lon, data.lat];
+      	  	  self.map.redraw();
+      	  	  self.map.zoom = data.zoomlevel;
+      	  	  self.map.redraw();
+      	  },1000);
       },
       gotolocation: function(d){
         var text = d.detail.text;
