--- a/src/main-app.html
+++ b/src/main-app.html
@@ -114,7 +114,7 @@ Copyright (c) 2016 Geodan
               <paper-button dialog-confirm>OK</paper-button>
           </div>
       </paper-dialog>
-    <app-drawer-layout fullbleed>
+    <app-drawer-layout fullbleed id='leftdrawer'>
 
       <!-- Drawer content -->
       <app-drawer>
@@ -283,6 +283,9 @@ Copyright (c) 2016 Geodan
       },
 
       _pageChanged: function(page) {
+      	  if (this.$.leftdrawer.narrow){
+      	  	  this.$.leftdrawer.drawer.close();
+      	  }
         // load page import on demand.
         //TT: lazy loading turned off
         //this.importHref(
